--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=localhost;Initial Catalog=ecinema-app-db;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
