--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=localhost;Initial Catalog=ecinema-app-db;Integrated Security=True"
+    "DefaultConnectionString": "Data Source=localhost;Initial Catalog=ecinema-app-db;Integrated Security=True; Encrypt=False"
   },
   "AllowedHosts": "*"
 }
